Updated sim_check to include vapply rather than a loop

--- a/changes_sjf.html
+++ b/changes_sjf.html
@@ -410,6 +410,7 @@ incidence_age_distribution_dev &lt;- function() {
 }</code></pre>
 <pre class="r"><code>test_output(sim_check_current_output, sim_check_dev)</code></pre>
 <pre><code>## Success!</code></pre>
+<p>Success was achieved, then seed fixing was removed.</p>
 </div>
 </div>
 
